[*] enablehud        - Restores your HUD configuration from a previous /disablehud.
[*] tolower          - Converts a string to all lowercase characters.
[*] toupper          - Converts a string to all uppercase characters.
[*] convertcase      - Converts a list of strings to lower/uppercase characters.
[*] testchar         - Tests a character argument for certain things. (e.g. echo (testchar a) // Output: 0 // It is not a 0-9 digit.)
[*] testlist         - Tests a list argument for certain things. (e.g. echo (testlist "1 2.3 3.14") // Output: 1 // It is a valid list of ints/floats.)
[*] player1          - // TODO explain // Also getposition and positiontype have been removed in favor of this command which does that and a lot more. :p
[*] Multiple Idents  - New helper aliases for voting for SURV, TPF, and TLSS. (e.g. /surv ac_desert)
[*] "Sleeps" can be persistent. (3rd argument of "sleep" command)
[*] Substr crash bug is fixed. Also the command can now use a negative position value.
[*] New stat in (pstat_score) for teamkills. New list is: FLAGS FRAGS DEATHS POINTS TEAM TEAMKILLS NAME // TODO move to compatibility.cfg
[*] on_quit.cfg for deleting aliases from saved.cfg upon quit.
[*] Many aliases that were stored in saved.cfg are now being stored as a single alias (list) "tmpClientData" and being restored on start. (see on_quit.cfg) // Not yet, still buggy. :P
[*] Missing bracket ([], (), etc.) errors now also notify the client of what file the error resides in.
[*] New automatically executed scripts folder in the root install directory of AC.
[*] The /spectate command can now only be used if connected to a server.
[*] togglebotview can no longer be used in arena modes.
[*] New delta_edit/game_# aliases for easily tweaking gamma/fov/flyspeed on-the-fly. (e.g. Hold F5 and scroll for gamma, F6 for fov, bind "domodifier 10" to a key for flyspeed)