@@ -251,6 +251,9 @@ docargument [S] [the original string to modify] [] [0];
 docargument [T] [the target sub-string to replace] [] [0];
 docargument [N] [the new sub-string to replace the target] [] [0];
 docexample [echo (strreplace "Hello cruel world" cruel "")] [Output: Hello world];
+docident [listaverage] [Returns the average of a list of numbers.];
+docargument [L] [the list of numbers] [supports ints and floats] [0];
+docexample [echo (listaverage "2 5 5")] [Output: 4.0];
 docsection [General]
 docident [addserver] [Adds a server to the list of server to query in the server list menu.];
 docargument [S] [the address of the server (hostname or IP)] [] [0];
